# ai

crew_shell/: main.py  pyproject.toml  types.py
crew_shell/crews/crew1/: crew.py
crew_shell/crews/crew1/config/: agents.yaml  tasks.yaml
crew_shell/tools/: file_tools.py
jarvis/: README.md  jarvis.py  pyproject.toml
jarvis/jarvis/: jarvis.py
newsfeed/: agents.py  main.py  requirements.txt  tasks.py  types.py
newsfeed/newsfeed_crew/: crew.py
newsfeed/newsfeed_crew/config/: agents.yaml
notebook/: Javis.md
notebook/.obsidian/: workspace.json
notebook/AI Lessons/: AI Lessons.md
notebook/videos/: Index.md
