[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Kit Corry <kit@corrycorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
pyttsx3 = "^2.98"
speechrecognition = "^3.11.0"
langchain = "^0.3.6"
langchain-community = "^0.3.4"
langchain-core = "^0.3.14"
langchain-ollama = "^0.2.0"

[tool.poetry.scripts]
jarvis = 'jarvis.jarvis:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
